# scaleplane

./: .gitignore  LICENSE  Makefile  README.md  banner.txt  docker-compose.yml  github-recovery-codes.txt
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py
backend/app/rbac/: deps.py  permissions.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_orgs.py  test_prompts.py
cli/: pyproject.toml
cli/scaleplane_cli/: api.py  config.py  main.py
cli/tests/: test_orgs.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  NavBar.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: LoginPage.tsx  (+9 more)
sdks/: EXTENSION.md
sdks/codegen/: export_openapi.py  generate.sh
sdks/java/: pom.xml
sdks/openapi/: runtime.overlay.yaml  scaleplane.openapi.json
sdks/python/: pyproject.toml
sdks/python/src/scaleplane/: __init__.py  auth.py  client.py  config.py  errors.py  transport.py
sdks/python/src/scaleplane/_generated/: __init__.py  models.py
sdks/python/src/scaleplane/resources/: __init__.py  prompts.py  routing.py
sdks/python/tests/: test_client.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
(+29 files in other folders)
