[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaleplane"
version = "0.1.0"
description = "ScalePlane Python SDK — runtime prompt resolve/promote and routing"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "respx>=0.21.0",
    "datamodel-code-generator>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scaleplane"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
